# EshyWM-Wayland

./: .gitignore  CMakeLists.txt  eshywm.conf
EshyIPC/: EshyIPC.cpp  EshyIPC.h
EshyUI/: Entity.cpp  Entity.h  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Texture.h  Util.h  VertexArray.cpp
EshyUI/Source/: Entity.cpp  Entity.h  EshyUI.cpp  EshyUI.h  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
Resources/: image.fshader  image.vshader  solid.vshader
Shared/: Shared.h
source/: Config.cpp  EshyWM.cpp  Keyboard.cpp  Output.cpp  Server.cpp  SpecialWindow.cpp  Window.cpp  eshywm.cpp  server.cpp  window.cpp
source/includes/: Config.h  EshyWM.h  Keyboard.h  Output.h  Server.h  SpecialWindow.h  Window.h  eshywm.h  server.h  util.h  window.h
source_eshybar/: eshybar.cpp  eshyui.cpp
source_eshybar/includes/: eshybar.h  eshyui.h
